Prevent horizontal scrollbar on sidebar

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -104,6 +104,7 @@ a.dark {
     grid-area: sidebar;
     width: 17rem;
     overflow-y: auto;
+    overflow-x: hidden;
 }
 
 .content {
